ordering the files and cleaning the files in development

--- a/notebooks/functions-preview.ipynb
+++ b/notebooks/functions-preview.ipynb
@@ -489,6 +489,99 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def valid_info(field):\n",
+    "        try:\n",
+    "            return field\n",
+    "        except:\n",
+    "            return 'None'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_news_data(html_raw_list: None):\n",
+    "\n",
+    "    # if html_raw_list == None:\n",
+    "    #     html_raw_list = get_news_items_html()\n",
+    "\n",
+    "    search_data = [] \n",
+    "\n",
+    "    print(f'Coletando dados de {len(html_raw_list)} headlines')\n",
+    "\n",
+    "    c = 1\n",
+    "\n",
+    "    for item in html_raw_list:\n",
+    "\n",
+    "        # coletando dados\n",
+    "        print(f'Coletando postagem de número {c}')\n",
+    "\n",
+    "        # pegando a url\n",
+    "        url = item.h3.a['href']\n",
+    "\n",
+    "        # pegando o headline\n",
+    "        headline = item.h3.text\n",
+    "\n",
+    "        # coletando mais informações dentro de cada url\n",
+    "        news_page = requests.get(url)\n",
+    "    \n",
+    "        # fazendo o parse do html\n",
+    "        news_content = bs(news_page.text, 'html.parser')\n",
+    "\n",
+    "        # pegando o autor da notícia\n",
+    "        author =  self.valid_info(news_content.select('.caas-attr-item-author')[0].text)\n",
+    "\n",
+    "        # Datetime e a quantidade de minutos da notícia\n",
+    "        updated_time =  self.valid_info(news_content.select('.caas-attr-time-style'))\n",
+    "\n",
+    "        datetime_news = self.valid_info(updated_time[0].time['datetime'])\n",
+    "        mins_read = self.valid_info(updated_time[0].select('.caas-attr-mins-read')[0].text.split()[0])\n",
+    "\n",
+    "        # pegando outras características da notícia\n",
+    "        data_site = self.valid_info(news_content.select('.reactions-count')[0]['data-site'])\n",
+    "        data_source = self.valid_info(news_content.select('.reactions-count')[0]['data-source'])\n",
+    "        data_type = self.valid_info(news_content.select('.reactions-count')[0]['data-type'])\n",
+    "        count_comments = self.valid_info(news_content.select('.reactions-count')[0].text)\n",
+    "        \n",
+    "        news_data = {\n",
+    "            'url': url,\n",
+    "            'author': author,\n",
+    "            'headline': headline,\n",
+    "            'datetime_news': datetime_news,\n",
+    "            'mins_read': mins_read,\n",
+    "            'data_site': data_site,\n",
+    "            'data_source': data_source,\n",
+    "            'data_type': data_type,\n",
+    "            'count_comments': count_comments,\n",
+    "        }\n",
+    "\n",
+    "        print(news_data)\n",
+    "\n",
+    "        search_data.append(news_data)\n",
+    "\n",
+    "        c += 1\n",
+    "\n",
+    "    return search_data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##############  BACKUP\n",
+    "############## foi criada a função de valid info"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -652,81 +745,6 @@
     "    return search_data\n",
     "\n",
     "get_news_data()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_news_data(html_raw_list: None):\n",
-    "\n",
-    "    # if html_raw_list == None:\n",
-    "    #     html_raw_list = get_news_items_html()\n",
-    "\n",
-    "    search_data = [] \n",
-    "\n",
-    "    print(f'Coletando dados de {len(html_raw_list)} headlines')\n",
-    "\n",
-    "    c = 1\n",
-    "\n",
-    "    for item in html_raw_list:\n",
-    "\n",
-    "        # coletando dados\n",
-    "        print(f'Coletando postagem de número {c}')\n",
-    "\n",
-    "        # pegando a url\n",
-    "        url = item.h3.a['href']\n",
-    "\n",
-    "        # pegando o headline\n",
-    "        headline = item.h3.text\n",
-    "\n",
-    "        # coletando mais informações dentro de cada url\n",
-    "        news_page = requests.get(url)\n",
-    "    \n",
-    "        # fazendo o parse do html\n",
-    "        news_content = bs(news_page.text, 'html.parser')\n",
-    "\n",
-    "        # pegando o autor da notícia\n",
-    "        author =  self.valid_info(news_content.select('.caas-attr-item-author')[0].text)\n",
-    "\n",
-    "        # Datetime e a quantidade de minutos da notícia\n",
-    "        updated_time =  self.valid_info(news_content.select('.caas-attr-time-style'))\n",
-    "\n",
-    "        datetime_news = self.valid_info(updated_time[0].time['datetime'])\n",
-    "        mins_read = self.valid_info(updated_time[0].select('.caas-attr-mins-read')[0].text.split()[0])\n",
-    "\n",
-    "        # pegando outras características da notícia\n",
-    "        data_site = self.valid_info(news_content.select('.reactions-count')[0]['data-site'])\n",
-    "        data_source = self.valid_info(news_content.select('.reactions-count')[0]['data-source'])\n",
-    "        data_type = self.valid_info(news_content.select('.reactions-count')[0]['data-type'])\n",
-    "        count_comments = self.valid_info(news_content.select('.reactions-count')[0].text)\n",
-    "        \n",
-    "        news_data = {\n",
-    "            'url': url,\n",
-    "            'author': author,\n",
-    "            'headline': headline,\n",
-    "            'datetime_news': datetime_news,\n",
-    "            'mins_read': mins_read,\n",
-    "            'data_site': data_site,\n",
-    "            'data_source': data_source,\n",
-    "            'data_type': data_type,\n",
-    "            'count_comments': count_comments,\n",
-    "        }\n",
-    "\n",
-    "        print(news_data)\n",
-    "\n",
-    "        search_data.append(news_data)\n",
-    "\n",
-    "        c += 1\n",
-    "\n",
-    "    return search_data\n",
-    "\n",
-    "try:\n",
-    "    get_news_data(get_news_items_html()[15])\n",
-    "except:\n",
-    "    pass\n"
    ]
   },
   {
@@ -1002,153 +1020,6 @@
     "    return search_data\n",
     "\n",
     "get_news_data()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'The operator and owner of brands such as Regal, Cinema City, Picturehouse and Planet has lined up AlixPartners as a consultant to work on a potential disposal of its UK operations, the report said, adding that the sale process was expected to run for several weeks.  The company surfaced from Chapter 11 bankruptcy less than a year ago after filling for U.S. bankruptcy in 2022 to restructure debt.  It is also considering alternative options, including a company voluntary arrangement which could put an unspecified number of its UK cinemas at risk of closure, Sky said.'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "## pega o texto da noticia\n",
-    "soup.select('.js-stream-content')[0].p.text\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Natalie  Grover'"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#caas-art-ddbc3274-d724-3010-8040-19bce6217663 > article > div > div > div > div > div > div > div:nth-child(1) > div.caas-content-byline-wrapper > div.caas-attr > div > div.caas-attr-item-author > span\n",
-    "author = news_content.select('.caas-attr-item-author')[0].text\n",
-    "author\n",
-    "\n",
-    "updated_time = news_content.select('.caas-attr-time-style')\n",
-    "\n",
-    "mins_read = updated_time[0].select('.caas-attr-mins-read')[0].text.split()[0]\n",
-    "\n",
-    "news_content.select('.reactions-count')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<div class=\"caas-attr-time-style\"><span>Updated </span><time class=\"caas-attr-meta-time\" datetime=\"2024-05-27T14:24:54.000Z\">Mon, May 27, 2024, 7:24 AM</time><span class=\"caas-attr-mins-read\">2 min read</span></div>]"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#caas-art-ddbc3274-d724-3010-8040-19bce6217663 > article > div > div > div > div > div > div > div:nth-child(1) > div.caas-content-byline-wrapper > div.caas-attr > div > div.caas-attr-time-style > time\n",
-    "updated_time = news_content.select('.caas-attr-time-style')\n",
-    "updated_time"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2'"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# pegando a data do datetime e a quantidade de minutos da notícia\n",
-    "datetime_news = updated_time[0].time['datetime']\n",
-    "mins_read = updated_time[0].select('.caas-attr-mins-read')[0].text.split()[0]\n",
-    "mins_read\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<span class=\"reactions-count caas-dynamic-count\" data-id=\"ddbc3274-d724-3010-8040-19bce6217663\" data-site=\"finance\" data-source=\"spotIm\" data-type=\"commentsCount\">1</span>]"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "### pegando a quantidade de comentários na notícia\n",
-    "#reactions-count-copy-ddbc3274-d724-3010-8040-19bce6217663\n",
-    "news_content.select('.reactions-count')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "finance\n",
-      "spotIm\n",
-      "commentsCount\n",
-      "1\n"
-     ]
-    }
-   ],
-   "source": [
-    "# pegando outras características da notícia\n",
-    "data_site = news_content.select('.reactions-count')[0]['data-site']\n",
-    "data_source = news_content.select('.reactions-count')[0]['data-source']\n",
-    "data_type = news_content.select('.reactions-count')[0]['data-type']\n",
-    "count_comments = news_content.select('.reactions-count')[0].text\n",
-    "\n",
-    "print(data_site)\n",
-    "print(data_source)\n",
-    "print(data_type)\n",
-    "print(count_comments)"
    ]
   }
  ],
